syntax = "proto3";

option go_package = "sigmaos/sigmap";

// A Qid is the server's unique identification for the file being
// accessed: two files on the same server hierarchy are the same if
// and only if their qids are the same.
message Tqid {
        uint32  type = 1;
        uint32  version = 2;
        uint64  path = 3;
};

message Stat {
        uint32  type = 1;
        uint32  dev = 2;
        Tqid    qid = 3;
        uint32  mode = 4;
        uint32  atime = 5;   // last access time in seconds
        uint32  mtime = 6;   // last modified time in seconds
        uint64  length = 7;  // file length in bytes
        string  name = 8;    // file name
        string  uid = 9;     // owner name
        string  gid = 10;     // group name
        string  muid = 11;    // name of the last user that modified the file
}

message Taddr {
        string addr = 1;
        string net = 2;
}

message Tmount {
        repeated Taddr addr = 1;
        string root = 3;
        bytes pubKey = 4;
}

message Tversion {
        uint32 msize = 1;
        string version = 2;
}

message Rversion {
        uint32 msize = 1;
        string version = 2;
}

message Tauth {
        uint32 afid = 1;
        repeated string Unames = 2;
        repeated string Anames = 3;
}

message Rauth {
       Tqid aqid = 1;
}

message Tattach {
        uint32 fid = 1;
        uint32 afid = 2;
        string uname = 3;
        string aname = 4;
}

message Rattach {
        Tqid qid = 1;        
}

message Rerror {
        uint32 errCode = 1;
        string obj = 2;
        string err = 3;
}

message Twalk {
        uint32 fid = 1;
        uint32 newFid = 2;
        repeated string wnames = 3;
}

message Rwalk {
        repeated Tqid qids = 1;
}

message Topen {
        uint32 fid = 1;
        uint32 mode = 2;
}

message Ropen {
        Tqid qid = 1;
        uint32 iounit = 2;
}

message Tcreate {
        uint32 fid = 1;
        string name = 2;
        uint32 perm = 3;
        uint32 mode = 4;
}

message Texercisethree {
        uint32 fid = 1;
}

message Rexercisethree {
}

message Rcreate {
        Tqid qid = 1;
        uint32 iounit = 2;
}

message TreadV {
        uint32 fid = 1;
        uint64 offset = 2;
        uint32 count = 3;
        uint32 version = 4;
}

message Rread {
}

message TwriteV {
        uint32 fid = 1;
        uint64 offset = 2;
        uint32 version = 3;
}

message Rwrite {
        uint32 count = 1;
}

message Tclunk {
        uint32 fid = 1;
}

message Rclunk {
}

message Tremove {
        uint32 fid = 1;
}

message Rremove {
}

message Tstat {
        uint32 fid = 1;
}

message Rstat {
        Stat stat = 1;
}

message Twstat {
        uint32 fid = 1;
        Stat stat = 3;
}

message Rwstat {
}

message Twatch {
        uint32 fid = 1;
}

message Trenameat {
        uint32 oldFid = 1;
        string oldName = 2;
        uint32 newFid = 3;
        string newName = 4;
}

message Rrenameat {
}

message Tgetfile {
        uint32 fid = 1;
        uint32 mode = 2;
        uint64 offset = 3;
        uint32 count = 4;
        repeated string wnames = 5;
        bool resolve = 6;
}

message Tputfile {
        uint32 fid = 1;
        uint32 mode = 2;
        uint32 perm = 3;
        uint64 offset = 4;
        repeated string Wnames = 5;
        bool resolve = 6;
}

message Tdetach {
        uint32 propId = 1;
        uint32 leadId = 2;
}

message Rdetach {
}

message Theartbeat {
        bool serverSide = 1;
        map<uint64, bool> sids = 2;
}

message Rheartbeat {
        map<uint64, bool> sids = 1;
}

message Tremovefile {
        uint32 fid = 1;
        repeated string Wnames = 2;
        bool resolve = 3;
}

message Twriteread {
        uint32 fid = 1; 
}
