syntax = "proto3";

option go_package = "sigmaos/spproto/srv/proto";

enum WatchEventType {
  CREATE = 0;
  REMOVE = 1;
}

message WatchEvent {
  string file = 1;
  WatchEventType type = 2;
}

message WatchEventList {
  repeated WatchEvent events = 1;
}
